Ajustes de layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ about: 'about.html'
 		  <img style="border: 3px solid #fff; box-shadow: 0 1px 1px rgba(0,0,0,0.3); border-radius: 100%" width=150 height=150 src="/assets/images/profile.jpg">
 		  <div>
 		    <i>{{ site.description }}</i>
-		    <a href='{{ site.baseurl }}{{ page.about }}'>Sobre</a>
+		    <a href='{{ site.baseurl }}{{ page.about }}'>Sobre Mim</a>
 		  </div>
 		</div>
             </h2>
